@@ -1,3 +1,7 @@
+[B][COLOR gold]v4.00.23[/COLOR][/B]
+- Fixed some issues with cache-ing under py3
+- Fixed minor source counting issue
+
 [B][COLOR gold]v4.00.22[/COLOR][/B]
 - Fixed sources messed-up order
 
